<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="hint_contacts">Enter recipients</string>
    <string name="hint_search">Search something</string>
    <string name="hint_reply">Enter a message</string>
    <string name="new_message">New message</string>
    <string name="new_messages">new messages</string>
    <string name="failed_message">Message failed to send</string>
    <string name="failed_messages">messages failed to send</string>
    <string name="failed_messages_summary">Tap to view</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_show_all">Show all messages</string>
    <string name="menu_show_unread">Show unread messages</string>
    <string name="menu_open_thread">Open conversation</string>
    <string name="menu_forward">Forward message</string>
    <string name="menu_call">Call</string>
    <string name="menu_read">Mark as read</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_copy">Copy text</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_summary_appearance">Themes, colors, and more</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_summary_general">Delivery, message sending, formatting</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_category_summary_notifications">Sounds, LED, privacy</string>
    <string name="pref_category_quickreply">QK Reply</string>
    <string name="pref_category_about">About</string>
    <string name="pref_category_summary_about">Version, changelog, authors, thanks</string>
    <string name="pref_category_blocking">Message Blocking</string>
    <string name="pref_category_summary_blocking">Block assholes sending spam and do it smartly!</string>
    <string name="pref_theme">Theme color</string>
    <string name="pref_theme_summary_alt">Tap to change theme</string>
    <string name="pref_status_tint">Tinted status bar</string>
    <string name="pref_navigation_tint">Tinted navigation bar</string>
    <string name="pref_background">Background color</string>
    <string name="pref_background_summary">Tap to change background color</string>
    <string name="pref_message_count">Message count</string>
    <string name="pref_message_count_summary">Show the number of messages for each conversation</string>
    <string name="pref_sent_timestamps">Sent timestamps</string>
    <string name="pref_sent_timestamps_summary">Show the timestamp for when a message was sent, not received</string>
    <string name="pref_force_timestamps">Force timestamps</string>
    <string name="pref_force_timestamps_summary">Enable timestamps for all messages</string>
    <string name="pref_key_timestamp_delay">New timestamp delay</string>
    <string name="pref_key_timestamp_delay_summary">The number of minutes which must elapse between two messages in order for a new timestamp to be shown.</string>
    <string name="pref_delivery">Delivery confirmations</string>
    <string name="pref_delivery_summary">Confirm that messages were sent successfully</string>
    <string name="pref_blocked_conversations">Blocked conversations</string>
    <string name="pref_blocked_conversations_summary">Long-press on a conversation and block to move to blocked inbox and stop notifications</string>
    <string name="pref_block_future">Block future messages</string>
    <string name="pref_block_future_summary">Add additional phone numbers to block</string>
    <string name="pref_text">Text</string>
    <string name="pref_led">Notification LED</string>
    <string name="pref_wake">Wake phone</string>
    <string name="pref_wake_summary">Turn your screen on when you receive a new message</string>
    <string name="pref_notifications_private">Private notifications</string>
    <string name="pref_notifications_private_summary">Tap to change what should be hidden in notification</string>
    <string name="pref_ticker">Show ticker</string>
    <string name="pref_ticker_summary">Shows snippet of new message in notification bar</string>
    <string name="pref_vibration">Vibration</string>
    <string name="pref_vibration_summary">Vibrate when new messages are received</string>
    <string name="pref_notification_call">Call button</string>
    <string name="pref_notification_call_summary">Call the sender of a message right from the notification</string>
    <string name="pref_dimiss_read">Mark as read</string>
    <string name="pref_dismiss_read_summary">Mark message as read when notification is cleared</string>
    <string name="pref_delayed">Delayed messaging</string>
    <string name="pref_delayed_summary">Wait before sending your messages, so you have a chance to review them</string>
    <string name="pref_delayed_duration">Delay length (seconds)</string>
    <string name="pref_delayed_duration_summary">Time to wait before sending your message</string>
    <string name="pref_quickreply_enabled">QK Reply enabled</string>
    <string name="pref_quickreply_enabled_summary">Show QK Reply window whenever a new message is received</string>
    <string name="pref_tap_to_quit">Tap to dismiss</string>
    <string name="pref_tap_to_quit_summary">Tap anywhere outside of the window to close it</string>
    <string name="pref_about_version_title">QKSMS version</string>
    <string name="pref_subcat_theme">Theme</string>
    <string name="pref_subcat_system_bars">System bars</string>
    <string name="pref_subcat_categories">Categories</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="title_compose">Compose</string>
    <string name="title_conversation_list">Conversations</string>
    <string name="title_blocked">Blocked</string>
    <string name="title_block_address">Block number</string>
    <string name="title_conversations_selected">%s selected</string>
    <string name="title_palette">Palette</string>
    <string name="menu_add_address_to_contacts">Add <xliff:g id="contactEmailOrNumber">%s</xliff:g> to People</string>
    <string name="view_message_details">View details</string>
    <string name="view_delivery_report">View report</string>
    <string name="delete_message">Delete</string>
    <string name="copy_message_text">Copy text</string>
    <string name="message_options">Message options</string>
    <string name="delivery_header_title">Report</string>
    <string name="delete_conversation">Delete conversations</string>
    <string name="delete_all_failed">Delete failed messages</string>
    <string name="delete_confirmation">Are you sure you would like to delete (%s) conversations?</string>
    <string name="delete_all_failed_confirmation">Are you sure you would like to delete failed messages from (%s) conversations?</string>
    <string name="discard_message_reason">Your message will be discarded because it has no valid recipients.</string>
    <string name="reply">Reply</string>
    <string name="read">Read</string>
    <string name="mark_read">Mark as read</string>
    <string name="call">Call</string>
    <string name="yes">Yes</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="enable">Enable</string>
    <string name="upgrade_now">Set now</string>
    <string name="okay">Okay</string>
    <string name="just_once">Just once</string>
    <string name="cancel">Cancel</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="no_subject_view">(No subject)</string>
    <string name="me">Me</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete_failed">Delete failed messages</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_unlock">Unlock</string>
    <string name="message_details_title">Message details</string>
    <string name="message_type_label">Type\u000A</string>
    <string name="text_message">Text message</string>
    <string name="from_label">From\u000A</string>
    <string name="to_address_label">To\u000A</string>
    <string name="sent_label">Sent\u000A</string>
    <string name="received_label">Received\u000A</string>
    <string name="saved_label">Saved\u000A</string>
    <string name="error_code_label">Error code\u000A</string>
    <string name="has_draft">Draft</string>
    <string name="draft_separator">,\u0020</string>
    <string name="message_timestamp_format"><xliff:g example="Fred Flinstone" id="string">%1$s</xliff:g>\u0020-\u0020<xliff:g example="9:39AM" id="string">%2$s</xliff:g></string>
    <string name="status_sending">Sending…</string>
    <string name="status_none">(None)</string>
    <string name="status_pending">Pending</string>
    <string name="status_received">Received</string>
    <string name="status_failed">Failed. Tap for options</string>
    <string name="recipient_label">Recipient:\u0020</string>
    <string name="status_label">Status:\u0020</string>
    <string name="delivered_label">Delivered:\u0020</string>
    <string name="confirm_dialog_title">Delete?</string>
    <plurals name="confirm_delete_conversation">
        
        <item quantity="one">One conversation will be deleted.</item>
        
        <item quantity="other"><xliff:g example="15" id="number">%1$s</xliff:g> conversations will be deleted.</item>
    </plurals>
    <string name="confirm_delete_all_conversations">All threads will be deleted.</string>
    <string name="confirm_delete_message">The message will be deleted.</string>
    <string name="confirm_delete_locked_message">Delete this locked message?</string>
    <string name="delete_unlocked">Delete locked messages</string>
    <string name="delete">Delete</string>
    <string name="not_default_mark_read">QKSMS must be your SMS app to mark messages read</string>
    <string name="not_default_mark_unread">QKSMS must be your SMS app to mark messages unread</string>
    <string name="not_default_delete">QKSMS must be your SMS app to delete messages</string>
    <string name="not_default_send">QKSMS must be your SMS app to send messages</string>
    <string name="not_default_first">Some things won\'t work until QKSMS is the default SMS app</string>
    <string name="delayed_messaging_info">Delayed messaging allows you to cancel messages before they send. Change the default behavior and more in Settings</string>
    <string name="delayed_duration_bounds_error">Duration must be between 1 and 30 seconds</string>
    <string name="dialog_conversation_details_title">Conversation details</string>
    <string name="dialog_conversation_details_last_message_date">Last message date</string>
    <string name="dialog_conversation_details_message_count">Message count</string>
    <string name="dialog_conversation_details_recipients">Recipients (%s)</string>
    <string name="toast_draft">Saved draft</string>
    <string name="toast_message_failure">Message failed to send</string>
    <string name="toast_copy_text">Copied text to clipboard</string>
    <string name="toast_billing_not_available">Purchase requires Google Play Store (billing) on your Android</string>
    <string name="menu_block_conversations">Block conversations</string>
    <string name="menu_unblock_conversations">Unblock conversations</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_blocked">Blocked</string>
    <string name="menu_view_details">View details</string>
    <string name="menu_mark_read">Mark read</string>
    <string name="menu_mark_unread">Mark unread</string>
    <string name="failed_message_title">Failed message options</string>
    <string name="error_no_recipients">Select some contacts to send this message to!</string>
    <string name="color_swatch_description">Color %1$d</string>
    <string name="compose">compose</string>
    <string name="timer">timer</string>
</resources>