<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_subcat_categories">

        <Preference
            android:icon="@drawable/ic_block"
            android:key="pref_key_category_blocking"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_blocking"
            android:title="@string/pref_category_blocking" />

        <Preference
            android:icon="@drawable/ic_settings"
            android:key="pref_key_category_general"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_general"
            android:title="@string/pref_category_general" />

        <Preference
            android:icon="@drawable/ic_notifications"
            android:key="pref_key_category_notifications"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_notifications"
            android:title="@string/pref_category_notifications" />

        <Preference
            android:icon="@drawable/ic_palette"
            android:key="pref_key_category_appearance"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_appearance"
            android:title="@string/pref_category_appearance" />

        <Preference
            android:icon="@drawable/ic_info_fill"
            android:key="pref_key_category_about"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_category_summary_about"
            android:title="@string/pref_category_about" />
    </PreferenceCategory>
</PreferenceScreen>