<?xml version="1.0" encoding="utf-8"?>

<com.moez.QKSMS.ui.view.ComposeView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/compose_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/compose_background"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.moez.QKSMS.ui.view.QKEditText
            android:id="@+id/compose_reply_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="-4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_toStartOf="@+id/compose_button"
            android:background="@drawable/message_sent"
            android:gravity="center_vertical"
            android:hint="@string/hint_reply"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textShortMessage|textMultiLine|textCapSentences"
            android:maxLines="3"
            android:minHeight="40dp"
            android:textColorHint="@color/grey_light"
            android:textCursorDrawable="@null"
            app:type="primary" />

        <FrameLayout
            android:id="@+id/compose_button"
            android:layout_width="56dp"
            android:layout_height="72dp"
            android:layout_alignBottom="@+id/compose_reply_text"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="-16dp"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/compose_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/compose"
                android:src="@drawable/plus_to_arrow" />

            <com.github.lzyzsd.circleprogress.DonutProgress
                android:id="@+id/progress"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:padding="0dp"
                android:rotation="90"
                android:visibility="invisible"
                app:donut_finished_color="@color/theme_dark_text_primary"
                app:donut_finished_stroke_width="4dp"
                app:donut_max="360"
                app:donut_text_size="0sp"
                app:donut_unfinished_color="@color/theme_dark_text_secondary"
                app:donut_unfinished_stroke_width="4dp" />

        </FrameLayout>

        <com.moez.QKSMS.ui.view.QKTextView
            android:id="@+id/compose_letter_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/compose_reply_text"
            android:layout_toEndOf="@+id/compose_reply_text"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:paddingTop="16dp"
            android:textColor="@color/grey_light"
            app:type="tertiary" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/attachment_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/delay"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/ripple_light"
            android:contentDescription="@string/timer"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_timer" />
    </LinearLayout>

</com.moez.QKSMS.ui.view.ComposeView>
